--- a/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
@@ -1848,7 +1848,7 @@
 
 "whats_new_auto_update_updating_maps" = "تحديث الخرائط";
 
-"whats_new_auto_update_title" = "تحديث الخرائط الخاصة بك التي تم تنزيلها";
+"whats_new_auto_update_title" = "قم بتحديث الخرائط التي قمت بنتزيلها";
 
 "whats_new_auto_update_message" = "تحديث الخرائط والاحتفاظ بالمعلومات حول الكائنات محدثة";
 
