--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -1848,7 +1848,7 @@
 
 "whats_new_auto_update_updating_maps" = "地図を更新中";
 
-"whats_new_auto_update_title" = "ダウンロード済みのマップを更新します";
+"whats_new_auto_update_title" = "ダウンロード済みのマップを更新してください";
 
 "whats_new_auto_update_message" = "地図を更新することで物件情報を最新の状態に保ちます";
 
