--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -1848,7 +1848,7 @@
 
 "whats_new_auto_update_updating_maps" = "Oppdaterer kart";
 
-"whats_new_auto_update_title" = "Oppdater nedlastede kart";
+"whats_new_auto_update_title" = "Oppdater dine nedlastede kart";
 
 "whats_new_auto_update_message" = "Ved å oppdatere kart holder du også informasjonen om ulike elementer oppdatert";
 
