--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -1094,5 +1094,5 @@
 	<string name="prefs_languages_information_off">Для арабської, грецької та румунської мов можливо вам знадобиться встановити додаткову систему TTS (наразі Google TTS не підтримує ці мови) з магазину Google Play — наприклад, Vocalizer TTS або SVOX Classics.\nДля управління налаштуваннями синтезу мови відкрийте на вашому пристрої Налаштування –&gt; Мова та введення –&gt; Мовлення –&gt; Перетворення тексту на мовлення. Тут ви можете завантажити додатковий мовний пакет або вибрати інструмент для перетворення тексту на мовлення.</string>
 	<string name="prefs_languages_information_off_link">Додаткову інформацію див. у цьому керівництві.</string>
 	<string name="whatsnew_transliteration_title">Транслітерація латинськими літерами</string>
-	<string name="whatsnew_transliteration_message">Якщо для вулиці чи об\\\&#39;єкта відсутня назва українською мовою, використовуватиметься назва, транслітерована латинськими літерами.</string>
+	<string name="whatsnew_transliteration_message">Якщо для вулиці чи об\&#39;єкта відсутня назва українською мовою, використовуватиметься назва, транслітерована латинськими літерами.</string>
 </resources>
