--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -1931,7 +1931,7 @@
 
 "whatsnew_transliteration_title" = "Транслітерація латинськими літерами";
 
-"whatsnew_transliteration_message" = "Якщо для вулиці чи об\\'єкта відсутня назва українською мовою, використовуватиметься назва, транслітерована латинськими літерами.";
+"whatsnew_transliteration_message" = "Якщо для вулиці чи об'єкта відсутня назва українською мовою, використовуватиметься назва, транслітерована латинськими літерами.";
 
 "learn_more" = "Learn more";
 
