--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -806,6 +806,19 @@
 	<string name="onboarding_notifications_title">Enable updates notifications</string>
 	<string name="onboarding_location_title">Help us find you</string>
 	<string name="onboarding_location_message">In order for you to use navigation and the other app functions, MAPS.ME needs access to your geoposition.</string>
+	<string name="onboarding_permissions_title">Allow MAPS.ME access to storage and location</string>
+	<string name="onboarding_permissions_message">So you can download maps, see places and traffic near you and use navigation.</string>
+	<string name="onboarding_storage_permissions_title">Grant access</string>
+	<string name="onboarding_storage_permissions_message">Change permissions settings in your device. Needs a storage access to use MAPS.ME.</string>
+	<string name="onboarding_detail_permissions_title">MAPS.ME needs access to</string>
+	<string name="onboarding_detail_permissions_storage_title">Storage</string>
+	<string name="onboarding_detail_permissions_storage_message">To save and use downloaded maps offline and save bookmarks.</string>
+	<string name="onboarding_detail_permissions_location_title">Location</string>
+	<string name="onboarding_detail_permissions_location_message">To see places and traffic near you and use navigation.</string>
+	<string name="onboarding_detail_permissions_storage_path_message">You can also change a destination to save downloaded maps.</string>
+	<string name="onboarding_welcome_title">Welcome to MAPS.ME</string>
+	<string name="onboarding_welcome_first_subtitle">Free, fast, detailed and entirely offline maps with turn-by-turn navigation.</string>
+	<string name="onboarding_welcome_second_subtitle">By launching the application, you agree to &lt;a href=\&quot;http://legal.my.com/us/maps/tou/\&quot;&gt;Terms&lt;/a&gt; of Use and &lt;a href=\&quot;https://legal.my.com/us/maps/privacy/\&quot;&gt;Privacy Policy&lt;/a&gt;.</string>
 	<string name="dialog_incorrect_feature_position">Change location</string>
 	<string name="message_invalid_feature_position">No object can be located here</string>
 	<string name="login_to_make_edits_visible">Log in so other users can see the changes that you have made</string>
@@ -966,6 +979,7 @@
 	<string name="something_is_not_working">Something is not working</string>
 	<!-- For the first routing -->
 	<string name="accept">Accept</string>
+	<string name="accept_and_continue">Accept and continue</string>
 	<!-- For the first routing -->
 	<string name="decline">Decline</string>
 	<string name="whats_new_route_profile_title">Better go about than fall into the ditch</string>
@@ -1122,4 +1136,7 @@
 	<string name="prefs_languages_information_off_link">For more information please check this guide.</string>
 	<string name="whatsnew_transliteration_title">Transliteration into Latin</string>
 	<string name="whatsnew_transliteration_message">If a street or an object doesn\&#39;t have a name in your language, it will be spelt using the Latin alphabet.</string>
+	<string name="learn_more">Learn more</string>
+	<string name="exit">Exit</string>
+	<string name="location_permission_denied">App location permission denied</string>
 </resources>
