--- a/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "downloader_available_maps" = "Tilgængelige";
 
 /* Country queued for download */
-"downloader_queued" = "i kø";
+"downloader_queued" = "I kø";
 
 "downloader_near_me_subtitle" = "I nærheden";
 
