--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -419,7 +419,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Beschikbaar</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">in de wachtrij</string>
+	<string name="downloader_queued">In de wachtrij</string>
 	<string name="downloader_near_me_subtitle">Bij mij in de buurt</string>
 	<string name="downloader_status_maps">Kaarten</string>
 	<string name="downloader_download_all_button">Alles downloaden</string>
