--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -422,7 +422,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Dostępne</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">w kolejce</string>
+	<string name="downloader_queued">W kolejce</string>
 	<string name="downloader_near_me_subtitle">Blisko mnie</string>
 	<string name="downloader_status_maps">Mapy</string>
 	<string name="downloader_download_all_button">Pobierz wszystkie</string>
