--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -437,7 +437,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Доступные</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">в очереди</string>
+	<string name="downloader_queued">В очереди</string>
 	<string name="downloader_near_me_subtitle">Возле меня</string>
 	<string name="downloader_status_maps">Карт</string>
 	<string name="downloader_download_all_button">Загрузить все</string>
