--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -425,7 +425,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Mevcut</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">sıraya alındı</string>
+	<string name="downloader_queued">Sıraya alındı</string>
 	<string name="downloader_near_me_subtitle">Yakınlarımda</string>
 	<string name="downloader_status_maps">Haritalar</string>
 	<string name="downloader_download_all_button">Hepsini indir</string>
