--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -439,7 +439,7 @@
 	<!-- Downloaded maps category -->
 	<string name="downloader_available_maps">Available</string>
 	<!-- Country queued for download -->
-	<string name="downloader_queued">queued</string>
+	<string name="downloader_queued">Queued</string>
 	<string name="downloader_near_me_subtitle">Near me</string>
 	<string name="downloader_status_maps">Maps</string>
 	<string name="downloader_download_all_button">Download All</string>
