--- a/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "downloader_available_maps" = "Elérhető";
 
 /* Country queued for download */
-"downloader_queued" = "várólistás";
+"downloader_queued" = "Várólistás";
 
 "downloader_near_me_subtitle" = "A közelemben";
 
