--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "downloader_available_maps" = "Dostępne";
 
 /* Country queued for download */
-"downloader_queued" = "w kolejce";
+"downloader_queued" = "W kolejce";
 
 "downloader_near_me_subtitle" = "Blisko mnie";
 
