--- a/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "downloader_available_maps" = "Mevcut";
 
 /* Country queued for download */
-"downloader_queued" = "sıraya alındı";
+"downloader_queued" = "Sıraya alındı";
 
 "downloader_near_me_subtitle" = "Yakınlarımda";
 
