--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -1053,6 +1053,10 @@
 
 "p2p_reroute_from_current" = "現在位置からのルートを作成しますか？";
 
+"p2p_add_stop" = "Add stop";
+
+"p2p_remove_stop" = "Remove stop";
+
 "whats_new_next_button" = "次へ";
 
 "editor_time_add" = "スケジュール追加";
