--- a/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
@@ -1514,7 +1514,7 @@
 
 "placepage_call_button" = "Appeler";
 
-"placepage_edit_bookmark_button" = "Éditer les signets";
+"placepage_edit_bookmark_button" = "Éditer le signet";
 
 "placepage_bookmark_name_hint" = "Nom du signet";
 
